--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "private": true,
+  "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
     "watch": "webpack --watch",
